# hsfah

./: FaH.hs  FahDummyMain.hs  README  hsfah.cabal  submit.hs
FaH/: Archive.hs  Constants.hs  DB.hs  Driver.hs  Exceptions.hs  Logging.hs  Main.hs  Project.hs  RumMapper.hs  RunMapper.hs  Tool.hs  Types.hs  Util.hs  WorkArea.hs
FaH/Tool/: Protomol.hs  ProtomolTools.hs
FaH/Tool/Protomol/: AcceptFrames.hs  CountFrames.hs  FramesPerGeneration.hs  Generation.hs  Tarball.hs  TarballModificationTime.hs
FaH/Tool/Protomol/Output/: DB.hs  Predicate.hs
FaH/Tool/Protomol/VMD/: RMSD.hs
FaH/Tools/: DB.hs  ProtomolVMDRMSD.hs
FaH/Worker/: DB.hs  Protomol.hs  RMSD.hs  TarballMapper.hs
test/: AcceptFrames.hs  CountFrames.hs  Exceptions.hs  OutputDB.hs  OutputPredicate.hs  Project.hs  Protomol.hs  RMSD.hs  RunMapper.hs
