name:                hsfah
version:             0.0
synopsis:            <Project description>
description:         <Project description>
category:            Codec
license:             BSD3

author:              Badi' Abdul-Wahid
maintainer:          abdulwahidc@gmail.com
build-type:          Simple

cabal-version :     >= 1.6

library
    build-depends:      
                        base > 4,
                        bytestring >= 0.9.1.0,
                        process >= 1.0.1.0,
                        bzlib >= 0.5,
                        mtl >= 1.1.0.0,
                        directory >= 1,
                        filepath >= 1.1.0.0,
                        containers >= 0.2.0.1,
                        dlist >= 0.5,
                        tagged >= 0.0,
                        unix >= 2.3.2.0,
                        MissingH >= 1.1.0.1,
                        random >= 1.0.0.1,
                        parsec >= 2.1.0.1
    exposed-modules:
                        FaH
                        FaH.Archive
                        FaH.Exceptions
                        FaH.Logging
                        FaH.Project
                        FaH.Tool.Protomol
                        FaH.Tool.ProtomolTools

                        FaH.Tool.Protomol.CountFrames
                        FaH.Tool.Protomol.FramesPerGeneration
                        FaH.Tool.Protomol.Generation
                        FaH.Tool.Protomol.Output.DB
                        FaH.Tool.Protomol.VMD.RMSD
                        FaH.Tool.Protomol.Tarball
                        FaH.Tool.Protomol.TarballModificationTime
                        FaH.Tool.Protomol.AcceptFrames
                        FaH.Tool.Protomol.Output.Predicate

                        FaH.Types
                        FaH.Util
